[package]
name = "chat-gpt-rs"
description = "Rust API Client for OpenAI's GPT3.5 AND GPT4 (ChatGPT) API."
version = "1.3.0"
repository = "https://github.com/AidenHadisi/chat-gpt-rs"
authors = ["Aiden Hadisi"]
keywords = ["gpt3", "chatgpt", "openai", "gpt4", "gpt"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.39"